# quantsignal

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml  retrain.yml
app/: main.py  schemas.py
app/routers/: explain.py  model_info.py  signals.py
infra/k8s/: app-deployment.yaml  app-service.yaml  configmap.yaml  mlflow-deployment.yaml
infra/terraform/: eks.tf  main.tf  outputs.tf  provider.tf  variables.tf  vpc.tf
k8s/: mlflow-service.yaml
pipeline/: features.py  ingest.py  train.py  validate.py
tests/: test_features.py  test_validate.py
utils/timer/: wrapper.py
