[project]
name = "quantsignal"
version = "0.1.0"
description = "Global equity alpha pipeline — factor-based ML ranking"
requires-python = ">=3.11"

dependencies = [
    # API
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    # Dados
    "yfinance>=0.2.40",
    "fredapi>=0.5.1",
    "pandas>=2.2.0",
    "numpy>=2.0.0",
    # ML
    "lightgbm>=4.3.0",
    "shap>=0.45.0",
    "scikit-learn>=1.4.0",
    # MLFlow
    "mlflow>=2.13.0",
    "boto3>=1.34.0",
    # Data quality
    "great-expectations>=0.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "pipeline*", "utils*"]